--- a/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
+++ b/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
@@ -322,6 +322,7 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <size key="titleShadowOffset" width="12" height="0.0"/>
+                                        <state key="normal" title="TAP"/>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new.png" translatesAutoresizingMaskIntoConstraints="NO" id="rhc-yb-lTa">
                                         <rect key="frame" x="539" y="0.0" width="100" height="100"/>
@@ -337,6 +338,7 @@
                                             <constraint firstAttribute="width" constant="100" id="oSM-gp-ZLQ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <state key="normal" title="TAP"/>
                                     </button>
                                 </subviews>
                             </stackView>
